--- a/_pages/year-archive.html
+++ b/_pages/year-archive.html
@@ -1,7 +1,7 @@
 ---
 layout: posts
 permalink: /year-archive/
-title: "Blog posts"
+title: "Personal Blog posts"
 author_profile: true
 redirect_from:
   - /wordpress/blog-posts/
